# chpp

./: .gitignore  ANNOUNCEMENT  ANNOUNCEMENT.MAILINGLIST  AUTHORS  Authors.csml  Authors.d  Authors.html  Download.csml  Download.d  Download.html  EMP.IDEEN  EMP.MAILS  EMP.NEWS  INSTALL  Links.csml  Links.d  Links.html  Main.csml  Main.d  Makefile  Makefile.am  Makefile.common  Makefile.depend  Makefile.sys.aix  Makefile.sys.dgux  Makefile.sys.linux  Makefile.sys.next  Manual.csml  Manual.d  Manual.html  NEWS  NEWS.INTERNAL  News.csml  News.d  News.html  README  TODO  TODO.INTERNAL  Wizard.csml  Wizard.d  (+103 more)
builtins/: Makefile  Makefile.am  arrayops.c  builtins.c  builtins.h  environments.c  fileops.c  flowctl.c  hashops.c  stringops.c  time.c  values.c  www.c
builtins/database/: Makefile  Makefile.am  adabas.c  database.c  database.h  msql.c  mysql.c
debian/: changelog  control  copyright  dirs  docs  files  rules
doc/: Makefile  Makefile.am  chpp.html  chpp.texi  manual.html  texinfo.tex  version.texi
files/: chpp-0.3.5-1.i386.rpm  chpp-0.3.5-1.src.rpm
gc/: Makefile  alpha_mach_dep.s  gc_priv.h  solaris_pthreads.c  speedtest.c
include/: Makefile.am  cgi.chh  files.chh  hash.chh  list.chh  sql.chh  strings.chh  time.chh  w3lib.chh
test/: Demo.txt  adabas.txt  allfaz.txt  bug  chdbc.txt  chppbug  counter.ch  faz.txt  faz2.txt  faz3.txt  filename.txt  fortest.txt  heinz  heinzbug  heribert.chpp  lambda.txt  lineend.txt  list.txt  main.c  main.c.2  memtest.txt  msql.txt  packages.txt  random.c  rek.txt  results.chpp  schani.lost.im.hirn  stdin.txt  t.txt  test.txt  test2.txt  test3.txt  time.txt  writetest.txt
test/include/: include.txt  include3.txt
test/include/incdir/: recinc2.txt
test/mp3/: album.lst  readlst.csml  tables.sql
test/regress/: dotest  tests
test/regress/arith/: arith.txt  expected.out
test/regress/array/: array.txt  expected.out
test/regress/assoc/: assoc.txt  expected.out
test/regress/define/: define.txt  expected.err  expected.out
test/regress/error/: error.txt  error2.txt  error3.txt
test/regress/fileops/: fileops.txt  test.data
test/regress/hanoi/: expected.out  hanoi.txt
test/regress/include/: expected.out  include.txt  include2.txt  include4.txt
test/regress/include/incdir/: recinc1.txt  recinc2.txt
test/regress/include/incdir/incdir2/: recinc3.txt
test/regress/loops/: expected.out  loops.txt
test/regress/metachar/: actual.out  expected.out  metachar.txt
test/regress/regex/: expected.out  regex.txt
test/regress/stringops/: expected.out  stringops.txt
test/reservation/: createweek.csml  reservation.csml  tables.sql
test/scheme/: scheme.txt
test/simplex/: simplex.chtex  simplex.dvi  simplex.tex
test/speedsuite/: dotest  fib.txt  hanoi.txt  otoof10.txt  tautogen.csml  test.dynstring  test.first  test.nextstep  test.o3  test.output  test.output2  test.symbolhash
test/tautogen/: data.cslab  data.new  gmon.out  grammar  tautogen.csml  tautogen.old.csml
test/w3chh/: Makefile  itest.csml  mela  picscan  test.csml  test.d  test2.csml  test3.chml  testbued.jpgd  w3lib.chh
test/website/: Makefile  choicebar.chml  choicestrip.chml  footer.chml  header.chml  menu.chml  news.csml  news.html  news_a.html  news_t.chml  template.chml  tips.csml  tips.html  tips_a.html  tips_t.chml  tricks.csml  tricks.html  tricks_a.html
